added period to h1

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/me.jpg" alt="" /></a>
-            <h1><strong>I am Alexia</strong>,<br> a beginner web developer</h1>
+            <h1><strong>I am Alexia</strong>,<br> a beginner web developer.</h1>
         </div>
     </header>
 
